--- a/src/css/common.css
+++ b/src/css/common.css
@@ -17,3 +17,16 @@ img {
   max-width: 100%;
 }
 
+.timer {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  width: 45vw;
+  margin: 4vw auto;
+  font-size: 2vw;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
